2006-03-03  Derek Scherger  <derek@echologic.com>

	* restrictions.cc (check_for_missing_additions): new function
	(remap_paths): make static	
	(get_base_roster_and_working_cset): call check_for_missing_additions
	* tests/t_restriction_excludes_parent.at: un-XFAIL
	
2006-03-03  Patrick Mauritz <oxygene@studentenbude.ath.cx>

	* commands.cc: remove rdata, certs, fdata and fdelta commands
	from user interface, and move them to
	* automate.cc: the automate interface as packet_for_rdata,
	packets_for_certs, packet_for_fdata, packet_for_fdelta
	* tests/t_bad_packets.at: adapt for 0.26 and for the changes above

2006-03-02  Derek Scherger  <derek@echologic.com>

	testsuite.at: fix broken include of t_restriction_excludes_parent.at

2006-03-02  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh} (restriction_requires_parent): remove
	* restrictions.cc (restrict_cset): remove call to
	restriction_requires_parent
	* restrictions.hh: remove unused struct
	* tests/t_persistent_server_keys.at: use unrestricted commit to
	avoid parent exclusion
	* tests/t_restriction_with_exclude.at: remove bogus check
	* tests/t_restrictions.at: work around excluded parents
	* tests/t_revert_new_project.at: un-XFAIL
	* tests/t_subdirs.at: work around excluded parents
	* tests/t_restriction_excludes_parent.at: new XFAIL test for restrictions
	that exclude required parent dirs
	* testsuite.at: call it

2006-03-02  Emile Snyder  <emile@alumni.reed.edu>

	add --unknown, when new files exist in new directories, would try
	to add files multiple times.
	
	* commands.cc (CMD(add)): Call perform_additions() with correct
	new boolean flag val to determine whether it recurses on the paths
	we hand it.
	* work.{cc,hh} (perform_additions): Use boolean flag to indicate
	whether the paths should be treated as a set of starting points
	for recursively adding entries, or a fixed set of paths.
	* tests/t_add.at: Test that we are not getting the warning
	messages when adding new files in new directories.