@@ -788,3 +788,4 @@ m4_include(tests/t_log_dir.at)
 m4_include(tests/t_show_conflicts.at)
 m4_include(tests/t_merge_into_dir.at)
 m4_include(tests/t_restriction_excludes_parent.at)
+m4_include(tests/t_revert_move_to_renamed_dir.at)
